--- a/index.html
+++ b/index.html
@@ -2,131 +2,189 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Frutas Don Antonio - Pedidos</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Gestión Agronómica</title>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
-    body{
-        font-family: 'Arial', sans-serif;
-        background:#f5f5f5;
-        margin:0;
-        padding:0;
-        color:#222;
-    }
-    header{
-        background:#000;
-        color:white;
-        padding:20px;
-        text-align:center;
-        font-size:26px;
-        font-weight:bold;
-        letter-spacing:1px;
-    }
-    .container{
-        width:90%;
-        max-width:800px;
-        background:white;
-        margin:30px auto;
-        padding:25px;
-        border-radius:8px;
-        box-shadow:0 0 10px rgba(0,0,0,0.08);
-    }
-    input,select{
-        width:100%;
-        padding:10px;
-        margin-top:10px;
-        border:1px solid #ccc;
-        border-radius:5px;
-        font-size:16px;
-    }
-    button{
-        width:100%;
-        margin-top:15px;
-        padding:12px;
-        font-size:16px;
-        border:none;
-        background:#000;
-        color:white;
-        border-radius:5px;
-        cursor:pointer;
-        transition:.2s;
-    }
-    button:hover{ background:#333; }
-
-    table{
-        width:100%;
-        border-collapse:collapse;
-        margin-top:25px;
-    }
-    th,td{
-        border-bottom:1px solid #ddd;
-        padding:10px;
-        text-align:left;
-    }
-    th{ background:#fafafa; font-weight:bold; }
-
-    .title{
-        font-size:22px;
-        margin-bottom:15px;
-        font-weight:600;
-        text-align:center;
-    }
+body{background:#f4f6f9;}
+.navbar{background:#28a745;}
+.card{border-radius:10px;}
+.table thead{background:#e9ecef;font-weight:bold;}
+.profit{color:green;font-weight:bold;}
+.loss{color:red;font-weight:bold;}
 </style>
-
 </head>
+
 <body>
 
-<header>Frutas Don Antonio - Pedidos</header>
+<nav class="navbar navbar-dark p-2">
+    <div class="container">
+        <a class="navbar-brand" href="#">📊 Gestión Agronómica</a>
+        <button class="btn btn-light" onclick="resetAll()">🗑 Vaciar todo</button>
+    </div>
+</nav>
 
-<div class="container">
+<div class="container mt-4">
 
-    <div class="title">Cargar nuevo pedido</div>
+<h2 class="text-center mb-4">Panel General</h2>
 
-    <label>Cliente:</label>
-    <input id="cliente" type="text" placeholder="Nombre del cliente">
+<div class="row text-center mb-4">
+    <div class="col-md-4"><div class="card p-3"><h5>Ganancias totales</h5><h3 id="totalProfit">$0</h3></div></div>
+    <div class="col-md-4"><div class="card p-3"><h5>Deudas pendientes</h5><h3 id="pendingDebts">$0</h3></div></div>
+    <div class="col-md-4"><div class="card p-3"><h5>Ventas registradas</h5><h3 id="totalProducts">0</h3></div></div>
+</div>
 
-    <label>Producto:</label>
-    <select id="producto">
-        <option value="Ciruela Black Anbar">Ciruela Black Anbar</option>
-        <option value="Durazno">Durazno</option>
-        <option value="Uva Red Globe">Uva Red Globe</option>
-    </select>
+<hr>
 
-    <label>Cantidad (cajas):</label>
-    <input id="cantidad" type="number">
+<h3>Registrar Venta</h3>
+<form id="productForm" class="row g-3">
+    <div class="col-md-3"><input placeholder="Producto" id="product" class="form-control" required></div>
+    <div class="col-md-3"><input placeholder="Cliente" id="client" class="form-control" required></div>
+    <div class="col-md-3"><input placeholder="Costo $" id="costPrice" type="number" class="form-control" step="0.01" required></div>
+    <div class="col-md-3"><input placeholder="Venta $" id="salePrice" type="number" class="form-control" step="0.01" required></div>
+    <button class="btn btn-success mt-3 col-3">Registrar</button>
+</form>
 
-    <button onclick="guardar()">Guardar pedido</button>
+<table class="table table-striped mt-3" id="salesTable">
+<thead><tr><th>Producto</th><th>Cliente</th><th>Costo</th><th>Venta</th><th>Ganancia</th><th>Fecha</th><th></th></tr></thead>
+<tbody></tbody>
+</table>
+<button class="btn btn-primary" onclick="exportToCSV('sales')">📄 Exportar ventas</button>
 
-    <table>
-        <thead>
-            <tr>
-                <th>Cliente</th>
-                <th>Producto</th>
-                <th>Cajas</th>
-            </tr>
-        </thead>
-        <tbody id="tabla"></tbody>
-    </table>
+<hr>
+
+<h3>Deudas / Pagos</h3>
+<form id="debtForm" class="row g-3">
+    <div class="col-md-4"><input placeholder="Cliente/Deudor" id="debtClient" class="form-control" required></div>
+    <div class="col-md-4"><input placeholder="Monto $" id="debtAmount" type="number" class="form-control" required></div>
+    <div class="col-md-4">
+        <select id="debtType" class="form-control">
+            <option value="deuda">Deuda</option>
+            <option value="pago">Pago</option>
+        </select>
+    </div>
+    <button class="btn btn-warning col-3 mt-3">Registrar</button>
+</form>
+
+<table class="table table-striped mt-3" id="debtsTable">
+<thead><tr><th>Cliente</th><th>Monto</th><th>Tipo</th><th>Estado</th><th>Fecha</th><th></th></tr></thead>
+<tbody></tbody>
+</table>
+<button class="btn btn-primary" onclick="exportToCSV('debts')">📄 Exportar deudas</button>
+
+<hr>
+
+<h3>Gráfico Mensual</h3>
+<canvas id="salesChart"></canvas>
 
 </div>
 
 <script>
-function guardar(){
-    let cliente = document.getElementById("cliente").value;
-    let prod = document.getElementById("producto").value;
-    let cant = document.getElementById("cantidad").value;
+let sales = JSON.parse(localStorage.getItem('sales')) || [];
+let debts = JSON.parse(localStorage.getItem('debts')) || [];
 
-    if(cliente==="" || cant===""){
-        alert("Completa todos los campos ✔");
-        return;
-    }
-
-    let fila = `<tr><td>${cliente}</td><td>${prod}</td><td>${cant}</td></tr>`;
-    document.getElementById("tabla").innerHTML += fila;
-
-    document.getElementById("cliente").value = "";
-    document.getElementById("cantidad").value = "";
+// update dashboard
+function updateDashboard(){
+    const profit=sales.reduce((a,s)=>a+(s.salePrice-s.costPrice),0);
+    const pending=debts.filter(d=>d.status==='pendiente').reduce((a,b)=>a+b.amount,0);
+    totalProfit.textContent=`$${profit.toFixed(2)}`;
+    pendingDebts.textContent=`$${pending.toFixed(2)}`;
+    totalProducts.textContent=sales.length;
 }
-</script>
 
+// ventas table
+function renderSalesTable(){
+    salesTable.querySelector("tbody").innerHTML="";
+    sales.forEach((s,i)=>{
+        let p=s.salePrice-s.costPrice;
+        salesTable.querySelector("tbody").innerHTML+=
+        `<tr><td>${s.product}</td><td>${s.client}</td><td>$${s.costPrice}</td>
+        <td>$${s.salePrice}</td><td class="${p>=0?'profit':'loss'}">$${p.toFixed(2)}</td>
+        <td>${s.date}</td><td><button class="btn btn-sm btn-danger" onclick="delSale(${i})">X</button></td></tr>`;
+    });
+}
+
+// deuda table
+function renderDebtsTable(){
+    debtsTable.querySelector("tbody").innerHTML="";
+    debts.forEach((d,i)=>{
+        debtsTable.querySelector("tbody").innerHTML+=
+        `<tr><td>${d.client}</td><td>$${d.amount}</td><td>${d.type}</td><td>${d.status}</td>
+        <td>${d.date}</td><td><button class="btn btn-success btn-sm" onclick="pay(${i})">✓</button></td></tr>`;
+    });
+}
+
+// delete sale
+function delSale(i){ sales.splice(i,1); save(); }
+
+// mark as paid
+function pay(i){debts[i].status="pagado"; save();}
+
+// save all
+function save(){
+    localStorage.setItem("sales",JSON.stringify(sales));
+    localStorage.setItem("debts",JSON.stringify(debts));
+    renderAll();
+}
+
+// reset all
+function resetAll(){
+    if(confirm("¿Seguro? se borrará TODO.")){
+        localStorage.clear(); location.reload();
+    }
+}
+
+// export CSV
+function exportToCSV(type){
+    let data=type==="sales"?sales:debts;
+    let csv=Object.keys(data[0]||{}).join(",")+"\n";
+    data.forEach(r=>csv+=Object.values(r).join(",")+"\n");
+    let a=document.createElement("a");
+    a.href=URL.createObjectURL(new Blob([csv],{type:"text/csv"}));
+    a.download=type+".csv"; a.click();
+}
+
+// chart
+function renderChart(){
+    const month={};
+    sales.forEach(s=>{
+        let m=new Date(s.date).toLocaleString("es",{month:"short"});
+        month[m]=(month[m]||0)+1;
+    });
+
+    new Chart(salesChart,{
+        type:"bar",
+        data:{labels:Object.keys(month),datasets:[{label:"Ventas",data:Object.values(month)}]}
+    });
+}
+
+// forms
+productForm.onsubmit=e=>{
+    e.preventDefault();
+    sales.push({
+        product:product.value, client:client.value,
+        costPrice:+costPrice.value, salePrice:+salePrice.value,
+        date:new Date().toLocaleDateString()
+    });
+    save(); productForm.reset();
+}
+
+debtForm.onsubmit=e=>{
+    e.preventDefault();
+    debts.push({
+        client:debtClient.value, amount:+debtAmount.value,
+        type:debtType.value, status:"pendiente",
+        date:new Date().toLocaleDateString()
+    });
+    save(); debtForm.reset();
+}
+
+// render all
+function renderAll(){updateDashboard();renderSalesTable();renderDebtsTable();renderChart();}
+renderAll();
+</script>
 </body>
 </html>
