--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Gestión de Clientes</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<div class="container center">
+    <h1>Sistema de Gestión</h1>
+    <p>Selecciona una sección</p>
 
+    <a class="btn" href="clientes.html">➕ Cargar Clientes</a>
+    <a class="btn" href="pagos.html">💸 Registrar Pagos</a>
+    <a class="btn" href="tabla.html">📄 Ver Tabla</a>
+</div>
+
+</body>
+</html>
