--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <title>Gestión de Clientes</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Panel de Gestión</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="container center">
-    <h1>Sistema de Gestión</h1>
-    <p>Selecciona una sección</p>
+<nav>
+    <a href="index.html">🏠 Inicio</a>
+    <a href="clientes.html">📋 Cargar Clientes</a>
+    <a href="tabla.html">📄 Ver Tabla</a>
+</nav>
 
-    <a class="btn" href="clientes.html">➕ Cargar Clientes</a>
-    <a class="btn" href="pagos.html">💸 Registrar Pagos</a>
-    <a class="btn" href="tabla.html">📄 Ver Tabla</a>
+<div class="container">
+<h1>Sistema de Gestión</h1>
+<p style="text-align:center;">Selecciona una sección para continuar</p>
 </div>
 
 </body>
